[package]
name = "cita-ed25519"
version = "0.1.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
description = "A library library provide ed25519 cryptography method"
license = "Apache-2.0"
edition = "2018"

[dependencies]
rustc-serialize = "0.3"
sodiumoxide = "0.2"
cita-types = "0.1"
hashable = { package = "cita-hashable", version = "0.1" }
cita-crypto-trait = "0.1"
rlp = "0.5"
serde = "1.0"

[dev-dependencies]
bincode = "0.8.0"

[features]
default = []
sha3hash = ["hashable/sha3hash"]
blake2bhash = ["hashable/blake2bhash"]
sm3hash = ["hashable/sm3hash"]
